--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "frontity-cloud",
   "version": "1.0.0",
+  "private": true,
   "description": "Micro service for frontity.cloud",
   "main": "src/index.js",
   "scripts": {
