--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "homepage": "https://github.com/frontity/cloud#readme",
   "dependencies": {
     "got": "^8.3.2",
-    "micro": "^9.3.2"
+    "micro": "^9.3.2",
+    "micro-cors": "^0.1.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^7.0.0",
