--- a/package.json
+++ b/package.json
@@ -50,8 +50,10 @@
     "jest": "^23.1.0",
     "lint-staged": "^7.2.0",
     "micro-dev": "^3.0.0",
+    "nock": "^9.4.2",
     "prettier": "^1.13.5",
     "semantic-release": "^15.5.5",
+    "test-listen": "^1.1.0",
     "travis-deploy-once": "^5.0.0"
   }
 }
