--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ cache:
     - ~/.npm
     - "node_modules"
 node_js:
-  - 'lts'
+  - 'lts/*'
 after_success:
   - npm run travis-deploy-once "npm run semantic-release"
 script:
