--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,12 @@ language: node_js
 cache:
   directories:
     - ~/.npm
-    - "node_modules"
+    - ~/.cache
+install:
+  - npm i -g npm@6
+  - npm ci
 node_js:
-  - 'lts/*'
+  - lts/*
 after_success:
   - npm run travis-deploy-once "npm run semantic-release"
 script:
