--- a/now.json
+++ b/now.json
@@ -1,5 +1,10 @@
 {
+  "name": "frontity-cloud",
   "version": 2,
+  "regions": ["all"],
+  "github": {
+    "autoAlias": false
+  },
   "alias": ["origin.frontity.cloud", "cdn.frontity.media"],
   "builds": [{ "src": "src/index.js", "use": "@now/node" }],
   "routes": [{ "src": ".*", "dest": "/src/index.js" }]
