--- a/now.json
+++ b/now.json
@@ -7,6 +7,6 @@
   },
   "alias": ["origin.frontity.cloud", "cdn.frontity.media"],
   "builds": [{ "src": "src/index.js", "use": "@now/node" }],
-  "routes": [{ "src": ".*", "dest": "/src/index.js" }]
+  "routes": [{ "src": "/.*", "dest": "/src/index.js" }]
 }
 
