Revert "build(now): try without routes"
This reverts commit 916581c23b8f600030006852cee7a3aa22622366.

--- a/now.json
+++ b/now.json
@@ -6,6 +6,7 @@
     "autoAlias": false
   },
   "alias": ["origin.frontity.cloud", "cdn.frontity.media"],
-  "builds": [{ "src": "src/index.js", "use": "@now/node" }]
+  "builds": [{ "src": "src/index.js", "use": "@now/node" }],
+  "routes": [{ "src": "/.*", "dest": "/src/index.js" }]
 }
 
