--- a/now.json
+++ b/now.json
@@ -6,7 +6,6 @@
     "autoAlias": false
   },
   "alias": ["origin.frontity.cloud", "cdn.frontity.media"],
-  "builds": [{ "src": "src/index.js", "use": "@now/node" }],
-  "routes": [{ "src": "/.*", "dest": "/src/index.js" }]
+  "builds": [{ "src": "src/index.js", "use": "@now/node" }]
 }
 
